--- a/bdd/package.json
+++ b/bdd/package.json
@@ -37,7 +37,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npm run lint:fix"
+      "pre-commit": "lint-staged"
     }
   },
   "lint-staged": {
