--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -1,4 +1,4 @@
-name: learn-github-actions
+name: learn-github-actions-test
 on: [push]
 jobs:
   check-bats-version:
@@ -6,5 +6,6 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v1
-      - run: npm install -g bats
-      - run: bats -v
+      - run: cd bdd
+      - run: npm install
+      - run: npm run test
