--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -6,10 +6,14 @@ jobs:
     defaults:
       run:
         working-directory: bdd
+    services:
+      selenium:
+        image: selenium/standalone-chrome
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v1
       - run: npm install
-      - run: npm run test
+      - run: npm run test-ci
         env:
           CI: true
+          SELENIUM_URL: http://selenium:4444/wd/hub/
