--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -3,12 +3,15 @@ on: [push]
 jobs:
   check-bats-version:
     runs-on: ubuntu-latest
+    container: 
     defaults:
       run:
         working-directory: bdd
     services:
       selenium:
         image: selenium/standalone-chrome
+        ports:
+          - 4444:4444
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v1
@@ -16,4 +19,4 @@ jobs:
       - run: npm run test-ci
         env:
           CI: true
-          SELENIUM_URL: http://selenium:4444/wd/hub/
+          SELENIUM_URL: http://localhost:4444/wd/hub/
