--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -5,7 +5,7 @@ jobs:
     timeout-minutes: 3
     runs-on: ubuntu-latest
     container:
-      image: node:stretch
+      image: node
       options: --network-alias testhost
     defaults:
       run:
@@ -34,4 +34,4 @@ jobs:
       - run: npm run test-ci
         env:
           CI: true
-          SELENIUM_URL: http://localhost:4444/wd/hub/
+          SELENIUM_URL: http://selenium:4444/wd/hub/
