--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -32,6 +32,7 @@ jobs:
       - run: npx wait-port -t 10000 testhost:5000
    
       - run: npm install
+      - run: curl -v http://testhost:5000
       - run: npm run test-ci
         env:
           CI: true
