--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -33,6 +33,8 @@ jobs:
    
       - run: npm install
       - run: curl -v http://testhost:5000
+      - run: curl -v http://testhost:5000
+        
       - run: curl -v http://testhost:5000/build/bundle.js
       - run: npm run test-ci
         env:
