--- a/bdd/package.json
+++ b/bdd/package.json
@@ -20,6 +20,7 @@
     "@typescript-eslint/eslint-plugin": "^4.7.0",
     "@typescript-eslint/parser": "^4.7.0",
     "chai": "^4.2.0",
+    "chromedriver": "^86.0.0",
     "cucumber": "^6.0.5",
     "cucumber-pretty": "^6.0.0",
     "dotenv": "^8.2.0",
