--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -6,7 +6,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: actions/setup-node@v1      
+      - uses: actions/setup-node@v1
+      - uses: nanasess/setup-chromedriver@master
       - run: |
           cd ui
           npm install
