--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -11,6 +11,7 @@ jobs:
       - run: |
           whereis google-chrome
           google-chrome --headless
+          ps aux
           cd ui
           npm install
           npm run build
