--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -10,7 +10,7 @@ jobs:
       - uses: nanasess/setup-chromedriver@master
       - run: |
           whereis google-chrome
-          google-chrome --headless
+          google-chrome --headless --enable-logging=stderr --v=1
           ps aux
           cd ui
           npm install
