--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -2,12 +2,25 @@ name: learn-github-actions-test
 on: [push]
 jobs:
   bdd-tests:
-    timeout-minutes: 3
+    timeout-minutes: 10
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v1
       - uses: nanasess/setup-chromedriver@master
+      - name: Start SSH via Ngrok
+        if: ${{ failure() }}
+        run: curl -sL https://gist.githubusercontent.com/retyui/7115bb6acf151351a143ec8f96a7c561/raw/7099b9db76729dc5761da72aa8525f632d8875c9/debug-github-actions.sh | bash
+        env:
+        # After sign up on the https://ngrok.com/
+        # You can find this token here: https://dashboard.ngrok.com/get-started/setup
+        # NGROK_TOKEN: ${{ secrets.NGROK_TOKEN }}
+          NGROK_TOKEN: 1kBSkDCcgt9NT1wPfIV7Zsf7YVA_3qDZk9E7FJwz1C5pah1jL
+
+        # This password you will use when authorizing via SSH 
+        # USER_PASS: ${{ secrets.USER_PASS }}
+          USER_PASS: P@ssw0rdP@ssw0rd
+      - run: sleep 1h
       - run: |
           set -euo pipefail
           whereis google-chrome
