--- a/mock-server/package.json
+++ b/mock-server/package.json
@@ -4,8 +4,10 @@
   "description": "",
   "main": "app.js",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "delay": "^4.4.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "uuid": "^8.3.1"
   },
   "devDependencies": {},
   "scripts": {
