--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,21 @@
 name: bdd-tests
 on: [push]
 jobs:
+  backend-tests:
+    strategy:
+      matrix:
+        go-version: [1.16.x]
+        os: [ubuntu-latest]
+    runs-on: ${{ matrix.os }}
+    steps:
+    - name: Install Go
+      uses: actions/setup-go@v2
+      with:
+        go-version: ${{ matrix.go-version }}
+    - name: Checkout code
+      uses: actions/checkout@v2
+    - name: Test
+      run: go test ./...
   bdd-tests:
     timeout-minutes: 5
     runs-on: ubuntu-latest
