--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,21 +1,23 @@
 name: bdd-tests
-on: [push]
+on: [ push ]
 jobs:
   backend-tests:
     strategy:
       matrix:
-        go-version: [1.16.x]
-        os: [ubuntu-latest]
+        go-version: [ 1.16.x ]
+        os: [ ubuntu-latest ]
     runs-on: ${{ matrix.os }}
     steps:
-    - name: Install Go
-      uses: actions/setup-go@v2
-      with:
-        go-version: ${{ matrix.go-version }}
-    - name: Checkout code
-      uses: actions/checkout@v2
-    - name: Test
-      run: go test ./...
+      - name: Install Go
+        uses: actions/setup-go@v2
+        with:
+          go-version: ${{ matrix.go-version }}
+      - name: Checkout code
+        uses: actions/checkout@v2
+      - name: Test
+        run: |
+          cd backend
+          go test ./...
   bdd-tests:
     timeout-minutes: 5
     runs-on: ubuntu-latest
