--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,19 @@
 name: bdd-tests
-on: [push]
+on: [ push ]
 jobs:
+  backend-tests:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Install Go
+        uses: actions/setup-go@v2
+        with:
+          go-version: ${{ matrix.go-version }}
+      - name: Checkout code
+        uses: actions/checkout@v2
+      - name: Test
+        run: |
+          cd backend
+          go test ./...
   bdd-tests:
     timeout-minutes: 5
     runs-on: ubuntu-latest
